--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "cra-template": "1.2.0",
     "rc-image": "^7.11.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-collapse": "^5.1.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.16.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
