--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "rc-image": "^7.11.0",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
